src/snapshots/lore__server__tests__tools_list_returns_all_six_tools.snap
---
source: src/server.rs
assertion_line: 1849
expression: resp
---
{
  "id": 2,
  "jsonrpc": "2.0",
  "result": {
    "tools": [
      {
        "description": "Search the knowledge directory for software patterns, conventions, and preferences. Use this before implementing new code to check for established patterns. Returns ranked results with source provenance.",
        "inputSchema": {
          "properties": {
            "include_metadata": {
              "default": false,
              "description": "When true, appends a `lore-metadata` fenced code block to the end of the response containing machine-readable JSON with per-row rank/source_file/score and a top-level mode field ('hybrid' | 'fts_fallback' | 'fts_only'). Defaults to false. Opt-in because the fenced block bloats the response and most callers only need the human-readable prose.",
              "type": "boolean"
            },
            "query": {
              "description": "Natural language search query",
              "type": "string"
            },
            "top_k": {
              "description": "Number of results to return (default: from config)",
              "type": "number"
            }
          },
          "required": [
            "query"
          ],
          "type": "object"
        },
        "name": "search_patterns"
      },
      {
        "description": "Create a new pattern in the knowledge directory. Use only when the user explicitly asks to save, record, or document a pattern. Creates a markdown file and indexes it; the change is committed to git when the knowledge directory is a git repository, otherwise the file is written without a commit. Pass `language` to opt the pattern into the structural retrieval gate (warn-and-proceed for unknown tokens).",
        "inputSchema": {
          "properties": {
            "body": {
              "description": "Pattern content in markdown",
              "type": "string"
            },
            "include_metadata": {
              "default": false,
              "description": "When true, appends a `lore-metadata` fenced code block to the end of the response containing machine-readable JSON with the written file path, chunk count, commit status, and `language_warnings` (array of unknown language tokens; empty when every token validated). Defaults to false.",
              "type": "boolean"
            },
            "language": {
              "description": "Optional language declaration that opts the pattern into the structural retrieval gate. Accepts a single token (`\"rust\"`) or an array (`[\"java\", \"kotlin\"]`). Tokens are lowercased and validated against the canonical language table; unknown tokens warn-and-proceed (the pattern is still written, the offending tokens are surfaced on stderr and in the response's `lore-metadata` fence as `language_warnings`).",
              "oneOf": [
                {
                  "type": "string"
                },
                {
                  "items": {
                    "type": "string"
                  },
                  "type": "array"
                }
              ]
            },
            "tags": {
              "description": "Optional tags for categorisation. Passing `\"universal\"` opts the pattern into the always-on injection tier — its body is emitted at every SessionStart and bypasses PreToolUse deduplication, unless the body's frontmatter also declares an `applies_when` predicate (in which case the pattern is deferred from SessionStart and re-injects on matching PreToolUse calls instead). See docs/pattern-authoring-guide.md §\"When to use the universal tag\" and §\"Tool/command predicate (applies_when)\".",
              "items": {
                "type": "string"
              },
              "type": "array"
            },
            "title": {
              "description": "Pattern title (used as filename and heading)",
              "type": "string"
            }
          },
          "required": [
            "title",
            "body"
          ],
          "type": "object"
        },
        "name": "add_pattern"
      },
      {
        "description": "Replace the content of an existing pattern. Use only when the user explicitly asks to update or rewrite a pattern. Overwrites the file and re-indexes; the change is committed to git when the knowledge directory is a git repository, otherwise the file is written without a commit. `tags` and `language` share three-way semantics (preserve when omitted, clear with `[]`, replace with a non-empty value); unknown language tokens warn-and-proceed.",
        "inputSchema": {
          "properties": {
            "body": {
              "description": "New pattern content in markdown (replaces existing body)",
              "type": "string"
            },
            "include_metadata": {
              "default": false,
              "description": "When true, appends a `lore-metadata` fenced code block to the end of the response containing machine-readable JSON with the updated file path, chunk count, commit status, and `language_warnings` (array of unknown language tokens; empty when every token validated). Defaults to false.",
              "type": "boolean"
            },
            "language": {
              "description": "Optional language declaration. Three-way semantics mirror `tags`: omit to preserve the existing frontmatter `language:` list (the default that prevents the de-language footgun on body-only rewrites); pass an empty array `[]` to clear; pass a non-empty value (string or array) to replace the list wholesale. Tokens are lowercased and validated against the canonical language table; unknown tokens warn-and-proceed and surface on stderr and in the response's `lore-metadata` fence as `language_warnings`.",
              "oneOf": [
                {
                  "type": "string"
                },
                {
                  "items": {
                    "type": "string"
                  },
                  "type": "array"
                }
              ]
            },
            "source_file": {
              "description": "Relative path of the file to update (from search results)",
              "type": "string"
            },
            "tags": {
              "description": "Optional. Omit to preserve the existing frontmatter tags (including `universal`). Pass an empty array `[]` to clear all tags. Pass a non-empty array to replace the tag list wholesale; include `\"universal\"` to keep or opt the pattern into the always-on injection tier (see `add_pattern`'s `tags` description for the interaction with `applies_when` predicates).",
              "items": {
                "type": "string"
              },
              "type": "array"
            }
          },
          "required": [
            "source_file",
            "body"
          ],
          "type": "object"
        },
        "name": "update_pattern"
      },
      {
        "description": "Add a new section to an existing pattern without replacing it. Use when the user wants to add examples, edge cases, or notes to an existing pattern. Appends a heading and body and re-indexes; the change is committed to git when the knowledge directory is a git repository, otherwise the file is written without a commit. Does not accept a `language` argument — appends are body-only by definition; use `update_pattern` to change the frontmatter `language:` declaration.",
        "inputSchema": {
          "properties": {
            "body": {
              "description": "Content to append under the heading",
              "type": "string"
            },
            "heading": {
              "description": "Heading for the new section",
              "type": "string"
            },
            "include_metadata": {
              "default": false,
              "description": "When true, appends a `lore-metadata` fenced code block to the end of the response containing machine-readable JSON with the updated file path, chunk count, and commit status. Defaults to false.",
              "type": "boolean"
            },
            "source_file": {
              "description": "Relative path of the file to append to (from search results)",
              "type": "string"
            }
          },
          "required": [
            "source_file",
            "heading",
            "body"
          ],
          "type": "object"
        },
        "name": "append_to_pattern"
      },
      {
        "description": "List every pattern indexed in the knowledge directory: title, source file, tags, whether the pattern is universal (always-on tier), and whether the pattern's frontmatter declares an `applies_when` predicate. Universal patterns without a predicate pin at every SessionStart and bypass PreToolUse deduplication; universal patterns with a predicate are deferred from SessionStart and re-inject only on matching PreToolUse calls. Use when an agent needs to enumerate available patterns without issuing a keyword search — the CLI equivalent is `lore list`. Useful before `update_pattern` to check current tags, universality, and predicate state.",
        "inputSchema": {
          "properties": {
            "include_metadata": {
              "default": false,
              "description": "When true, appends a `lore-metadata` fenced code block to the end of the response containing machine-readable JSON with an array of patterns, each carrying `title`, `source_file`, `tags`, `is_universal`, and `has_predicate`. Defaults to false.",
              "type": "boolean"
            }
          },
          "required": [],
          "type": "object"
        },
        "name": "list_patterns"
      },
      {
        "description": "Report knowledge directory health: whether it is a git repository, the indexed chunk and source counts, the last ingested commit (if any), whether the inbox branch workflow is configured, whether a .loreignore file is active (filtering files out of the index), and whether the knowledge directory is effectively empty (no markdown files, or every file excluded by .loreignore). Use this before write operations to verify the knowledge directory is in the expected state, especially when the agent needs to know whether changes will be committed to git or whether files in a particular path are excluded from search.",
        "inputSchema": {
          "properties": {
            "include_metadata": {
              "default": false,
              "description": "When true, appends a `lore-metadata` fenced code block to the end of the response containing machine-readable JSON with knowledge_dir, knowledge_dir_status (\"populated\", \"empty\", or \"missing\"), empty_knowledge_dir (bool), git_repository, last_ingested_commit, chunks_indexed, sources_indexed, languages_declared (token -> source-count map matching the `language:` frontmatter surface, e.g. `{\"rust\": 12, \"typescript\": 5}`; multi-language sources count in each declared bucket so the sum can exceed sources_indexed), languages_undeclared (integer count of sources with no `language:` declaration), languages_error (null in normal operation; carries the error message when the language aggregation query fails, so agents can distinguish a broken query from a genuinely empty knowledge directory), inbox_workflow_configured, delta_ingest_available, loreignore_active, universal_advisories (count, oversized bodies, near-miss tags from the most recent full or single-file ingest), and `ollama` (object with `installed`, `running`, `model_available`, `model`, and `runtime` — the latter is `{\"state\": \"not_checked\"}` by default, switching to `\"ok\"`, `\"skipped\"`, or `\"failed\"` with `short_reason` and `status_line` when probe_runtime is passed). The empty_knowledge_dir field reports on-disk state, distinct from sources_indexed (database state): when sources_indexed is 0 and empty_knowledge_dir is false, files exist but have not been ingested — run `lore ingest`. When empty_knowledge_dir is true, knowledge_dir_status discriminates further: \"empty\" calls for adding `.md` files or relaxing `.loreignore`; \"missing\" means the configured path doesn't exist or isn't a directory. Defaults to false.",
              "type": "boolean"
            },
            "probe_runtime": {
              "default": false,
              "description": "When true, runs a runtime probe against Ollama (a minimal embed call) to verify inference actually works — equivalent to `lore status --full`. The result is exposed under `metadata.ollama.runtime`. Adds 3–15 seconds of latency on first call (cold model load); subsequent calls within 30 s are fast. Default false — agents calling lore_status as a routine health check should leave this off; agents debugging a silent FTS fallback should turn it on.",
              "type": "boolean"
            }
          },
          "required": [],
          "type": "object"
        },
        "name": "lore_status"
      }
    ]
  }
}
